--- a/index.html
+++ b/index.html
@@ -6,35 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bistro BonAppetit</title>
     <link rel="icon" href="./img/logo.jpg" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="stylesheet" href="./css/style2.css" />
   </head>
 
   <body>
     <div class="top-page">
       <header>
-        <img src="img/logo.jpg" alt="" class="logo">
-        <input type="checkbox" id = "nav-toggle" class="nav-toggle" />
+        <img src="img/logo.jpg" alt="" class="logo" />
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <nav>
-            <ul>
-                <li class="nav1"><a href="#policy">理念・ポリシー</a></li>
-                <li><a href="#info">お知らせ</a></li>
-                <li><a href="#menu">メニュー</a></li>
-                <li><a href="#reservation">予約</a></li>
-                <li><a href="#location">店舗情報</a></li>
-            </ul>
-
+          <ul>
+            <li class="nav1"><a href="#policy">理念・ポリシー</a></li>
+            <li><a href="#info">お知らせ</a></li>
+            <li><a href="#menu">メニュー</a></li>
+            <li><a href="#reservation">予約</a></li>
+            <li><a href="#location">店舗情報</a></li>
+          </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
+          <span></span>
         </label>
-
-    </header>
+      </header>
     </div>
     <div class="main-visual">
       <div class="main-visual-h1">Be Our Guest</div>
@@ -47,21 +40,16 @@
     <section id="policy">
       <h1 class="policy-h1">理念・ポリシー</h1>
 
-      <div class="policy-contents">
-        <p>
-          <span style="font-size: x-large"
-            >お料理はハッピーな味わいでワクワクし、日常から解放されるモダンな店内は、<br />束の間の時間旅行を楽しみ、お腹も心も満たされる...</span
-          >
+      <div>
+        <p class="policy-contents">
+          お料理はハッピーな味わいでワクワクし、日常から解放されるモダンな店内は、<br />束の間の時間旅行を楽しみ、お腹も心も満たされる...
         </p>
       </div>
 
       <div class="alice-container">
-        <div class="content-left">
-          <img src="./img/200.webp" alt="alice" class="coffeecup" />
-        </div>
-        <div class="container-right">
-          <img src="./img/200w.webp" alt="alice" class="alice-cake" />
-        </div>
+        <img src="./img/200.webp" alt="alice" class="coffeecup" />
+
+        <img src="./img/200w.webp" alt="alice" class="alice-cake" />
       </div>
     </section>
 
@@ -73,13 +61,15 @@
       <br /><br />
       <div class="flex">
         <div class="box">
-          <img src="./img/bistrohamburg.jpg" alt="" />
+          <div class="bento-flex">
+            <img src="./img/bistrohamburg.jpg" alt="" class="menu-img" />
+          </div>
           <h3 class="info-h3">ビストロハンバーグ弁当</h3>
           <h4 class="info-h4">1150円（税込）</h4>
         </div>
         <div class="box">
           <p class="bento-description">
-            電子レンジで2分ほど温めていただくだけで、<br />お店で出てくるハンーバーグが味わえます！<br />（ソースはデミグラス、シャリアピン、ポン酢鬼おろし、ガーリックから<br />お選びいただけます。）
+            電子レンジで2分ほど温めていただくだけで、<br />お店で出てくるハンーバーグが味わえます！<br />（ソースはデミグラス、シャリアピン、ポン酢鬼おろし、ガーリックからお選びいただけます。）
           </p>
         </div>
       </div>
@@ -87,12 +77,14 @@
       <br />
       <div class="flex">
         <div class="box">
-          <img src="./img/takeout-curry.jpg" alt="" />
+          <div class="bento-flex">
+            <img src="./img/takeout-curry.jpg" alt="" class="menu-img" />
+          </div>
           <h3 class="info-h3">ビストロカレーライス</h3>
           <h4 class="info-h4">800円（税込）</h4>
         </div>
         <div class="box">
-          <p class="bento-description1">
+          <p class="bento-description b2">
             お肉がゴロゴロ入った、ちょっぴり辛口な本格欧風カレー！<br />特製ガーリックライスとの相性抜群！
           </p>
         </div>
@@ -101,17 +93,19 @@
 
       <div class="flex">
         <div class="box">
-          <img src="./img/bistrostew.jpg" alt="" />
+          <div class="bento-flex">
+            <img src="./img/bistrostew.jpg" alt="" class="menu-img" />
+          </div>
           <h3 class="info-h3">ビストロビーフシチュー弁当</h3>
           <h4 class="info-h4">1650円（税込）</h4>
         </div>
         <div class="box">
-          <p class="bento-description2">
+          <p class="bento-description b3">
             口の中に入れた瞬間ふわっと溶けるビーフが
             <br />ワイン香るデミグラスソースと絡み合う...
           </p>
         </div>
-        <br /><br />
+        <br />
       </div>
     </section>
 
@@ -125,7 +119,7 @@
           <div class="food-header f1">
             ビストロハンバーグ<br /><span>(粗挽きビーフ100%)</span>
           </div>
-          <div class="food-description">
+          <div class="food-description f1" >
             ★デミグラスソース <br />★ガーリックソース <br />★シャリアピンソース
             <br />★スパイシートマトソース<br />★和風鬼おろしソース
           </div>
@@ -134,28 +128,28 @@
           <img src="./img/folder/39xb_w500h500.jpg" alt="" />
           <div class="food-header">今日のパスタ</div>
           <div class="food-description">
-            <br /><br />シェフの気まぐれパスタ！<br />本日のパスタはスタッフにお尋ねください。
+            シェフの気まぐれパスタ！<br />本日のパスタはスタッフにお尋ねください。
           </div>
         </div>
         <div class="child c3">
           <img src="./img/folder/j42f_w500h500.jpg" alt="" />
           <div class="food-header">ビーフシチュー</div>
           <div class="food-description">
-            <br /><br />上品な気分が味わえる、<br />ボリューミーなビーフシチュー！ちょっとした自分へのご褒美に以下かですか？
+            上品な気分が味わえる、<br />ボリューミーなビーフシチュー！ちょっとした自分へのご褒美に以下かですか？
           </div>
         </div>
         <div class="child c4">
           <img src="./img/folder/odyx_w500h500.jpg" alt="" />
           <div class="food-header">季節の肉料理</div>
           <div class="food-description">
-            <br /><br />オススメの逸品！日本の色とりどりの四季をイメージしたお料理です。ご詳細はスタッフにお尋ねください。
+            オススメの逸品！日本の色とりどりの四季をイメージしたお料理です。ご詳細はスタッフにお尋ねください。
           </div>
         </div>
         <div class="child c5">
           <img src="./img/folder/uykf_w500h500.jpg" alt="" />
           <div class="food-header">季節の魚料理</div>
           <div class="food-description">
-            <br /><br />オススメの逸品！日本の色とりどりの四季をイメージしたお料理です。ご詳細はスタッフにお尋ねください。
+            オススメの逸品！日本の色とりどりの四季をイメージしたお料理です。ご詳細はスタッフにお尋ねください。
           </div>
         </div>
       </div>
@@ -165,7 +159,7 @@
       <p class="bottom"></p>
       <h1 class="reservation-h1">ご予約</h1>
 
-      <section class="flex100">
+      <section class="reservation">
         <img src="./img/letsgo.webp" class="letsgo" />
 
         <div>
@@ -176,15 +170,14 @@
         </div>
 
         <img src="./img/feast.webp" alt="alice" class="willywonka" />
+       
       </section>
-      <section>
-        <br />
-        <div class="flex1">
-          <br />
-          <h3 class="reservation-h3">
-            インスタ内のダイレクトメッセージでもご予約承れます！
-          </h3>
-          <div class="in">お店のInstagram↓</div>
+      <section class="instagram">
+        <h3 class="reservation-h3">
+          インスタ内のダイレクトメッセージでもご予約承れます！
+        </h3>
+       <div class="in">お店のInstagram↓</div>
+       
           <ul class="snsbtniti2">
             <li>
               <a
@@ -214,7 +207,7 @@
             allowfullscreen=""
             loading="lazy"
           ></iframe>
-          埼玉県さいたま市大宮区宮町１－８２-２Ｆ
+          <div class="map-l">埼玉県さいたま市大宮区宮町１－８２-２Ｆ</div>
         </div>
         <div class="map-description">
           <h5>アクセス</h5>
@@ -241,11 +234,5 @@
     </section>
 
     <footer>Copyright 2021 ビストロボナペティ 大宮店</footer>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
