--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bistro BonAppetit</title>
     <link rel="icon" href="./img/logo.jpg" />
 
-    <link rel="stylesheet" href="./css/style2.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
 
   <body>
