--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
       <div class="parent">
         <div class="child c1">
-          <img src="./img/zt2h_w500h500.jpg" alt="" />
+          <img src="./img/folder/zt2h_w500h500.jpg" alt="" />
           <div class="food-header f1">
             ビストロハンバーグ<br /><span>(粗挽きビーフ100%)</span>
           </div>
@@ -125,28 +125,28 @@
           </div>
         </div>
         <div class="child c2">
-          <img src="./img/39xb_w500h500.jpg" alt="" />
+          <img src="./img/folder/39xb_w500h500.jpg" alt="" />
           <div class="food-header">今日のパスタ</div>
           <div class="food-description">
             シェフの気まぐれパスタ！<br />本日のパスタはスタッフにお尋ねください。
           </div>
         </div>
         <div class="child c3">
-          <img src="./img/j42f_w500h500.jpg" alt="" />
+          <img src="./img/folder/j42f_w500h500.jpg" alt="" />
           <div class="food-header">ビーフシチュー</div>
           <div class="food-description">
             上品な気分が味わえる、<br />ボリューミーなビーフシチュー！ちょっとした自分へのご褒美に以下かですか？
           </div>
         </div>
         <div class="child c4">
-          <img src="./img/odyx_w500h500.jpg" alt="" />
+          <img src="./img/folder/odyx_w500h500.jpg" alt="" />
           <div class="food-header">季節の肉料理</div>
           <div class="food-description">
             オススメの逸品！日本の色とりどりの四季をイメージしたお料理です。ご詳細はスタッフにお尋ねください。
           </div>
         </div>
         <div class="child c5">
-          <img src="./img/uykf_w500h500.jpg" alt="" />
+          <img src="./img/folder/uykf_w500h500.jpg" alt="" />
           <div class="food-header">季節の魚料理</div>
           <div class="food-description">
             オススメの逸品！日本の色とりどりの四季をイメージしたお料理です。ご詳細はスタッフにお尋ねください。
